assets/less/base/ui/box.less
// Box
//
// The Box builds the foundation for most of the views.
//
// Markup:
// <div class="box">
// 	<header class="box-header"><span class="box-header-title">Title</span><span class="box-header-links"><a href="#" class="box-header-link">Link #1</a> <a href="#" class="box-header-link">Link #2</a> <a href="#" class="box-header-link">Link #3</a></span></header>
// 	<section>
//		<header><span class="title">First Section Header</span></header>
//		<p>Lorem Ipsum</p>
//		<header><span class="title">Second Section Header</span></header>
//		<p>Dolor sit amet</p>
//	</section>
// </div>
//
// Styleguide 2.1
.box {
	overflow: hidden;

	@media @desktop {
		border-radius: @inputBorderRadius;
		border: 1px solid @btnBorder;
	}
	@media @mobile {
		height: 100%;
	}
	background-color: @btnBackgroundHover;
	&:extend(.box-fix);
}
.box-header {
	height: 30px;
	.gradient(darken(@btnBackground, 2%), @btnBackgroundHover);
	border: none;
	border-bottom: 1px solid @btnBorder;
	overflow: hidden;
	@media @mobile {
		height: 50px;
	}
}
.box-header-links {
	float: right;
	margin: 0 1%;
	line-height: 30px;
}
.box-header-link {
	display: inline-block;
	float: left;
	color: #b2b2b2;
	margin: 0 0.25em;
	&:hover {
		color: lighten(#b2b2b2,10%);
	}
	&:first-child {
		margin-left: 0;
	}
	&:last-child {
		margin-right: 0;
	}
}
.box-header-title {
	float: left;
	padding: 0 1%;
	line-height: 30px;
	&:extend(.box-fix);
	@media @mobile {
		line-height: 50px;
	}
}
.box-header-button {
	padding: 2px 7px;
	margin-right: 0;
	outline: none;
	border: none;
	height: 30px;
	background: transparent;
	text-align: left;
	&:hover {
		background: rgba(202,202,202,0.2);
	}
	&:focus {
		box-shadow: inset 0px 0px 2px @grayLight;
	}
	@media @mobile {
		height: 50px;
		width: 50px;
		text-align: center;
	}
}
.box-header-button--right {
	float: right;
	border-left: 1px solid @btnBorder;
}
.box-header-button--left {
	float: left;
	border-right: 1px solid @btnBorder;
}
.box-header--content {
	border-top: 1px solid @btnBorder;
	background: @btnBackgroundHover;
	&:before, :after {
		content: "";
		margin-left: 5px;
	}
}
.box-header--noBorder {
	border-top: none;
}
.box-content {
	padding: 0;
	&:extend(.box-fix);
	&:extend(.clear-fix);
	h1,h2,h3,h4,h5,h6 {
		margin-left: 0.5%;
	}
}
.box-content--padding {
	padding: 5px 0;
}
.box-content--sidePadding {
	padding: 0px 10px;
}
.box-content--scroll {
	position: relative;
	overflow-y: scroll;
	height: ~"calc(100% - 30px)"; // fixes the scroll-bar. negative margin will place the scroll-bar into the header.
	-webkit-overflow-scrolling: touch;
	@media @mobile {
		height: ~"calc(100% - 50px)";
	}
}
.box--large {
	border-radius: 0;
	.box-header { height: 50px; }
	.box-header-title { line-height: 50px; }
	.box-header-button { height: 50px; width: 50px; text-align: center; }
	.box-content { border-radius: 0; }
	.box-content--scroll { height: ~"calc(100% - 50px)"; }
}

